<resources>
    <string name="app_name">MyContactApp</string>
    <string name="full_name">Nombre Completo</string>
    <string name="phone">Teléfono</string>
    <string name="email">Email</string>
    <string name="description">Descripción Contacto</string>
    <string name="button_next">Siguiente</string>
    <string name="text_picker">Fecha de Nacimiento</string>
    <string name="warning_forum">Algunos campos están vacíos</string>
    <string name="confirm_form_title">Confirmar Datos</string>
    <string name="confir_text_button">Editar Datos</string>
</resources>
